--- a/hugo.toml
+++ b/hugo.toml
@@ -63,10 +63,10 @@ pagination.pagerSize = 5
   # Example format, with date, time, and timezone abbreviation:
   # dateFormat = "2006-01-02 3:04:06 PM MST"
 
-[params.static]
-  favicon = "favicon.svg"
-  favicon16x16 = "favicon.svg"
-  favicon32x32 = "favicon.svg"
+[params.assets]
+favicon = "/favicon.ico"
+favicon16x16 = "/favicon.svg"
+favicon32x32 = "/favicon.svg"
 
 [params.twitter]
   # set Twitter handles for Twitter cards
