--- a/hugo.toml
+++ b/hugo.toml
@@ -65,8 +65,10 @@ pagination.pagerSize = 5
 
 [params.assets]
 favicon = "/favicon.ico"
-favicon16x16 = "/favicon.svg"
-favicon32x32 = "/favicon.svg"
+favicon16x16 = "/favicon-16x16.png"
+favicon32x32 = "/favicon-32x32.png"
+apple_touch_icon = "/apple_touch_icon.png"
+
 
 [params.twitter]
   # set Twitter handles for Twitter cards
