--- a/hugo.toml
+++ b/hugo.toml
@@ -15,7 +15,7 @@ pagination.pagerSize = 5
   contentTypeName = "posts"
 
   # if you set this to 0, only submenu trigger will be visible
-  showMenuItems = 2
+  showMenuItems = 3
 
   # show selector to switch language
   showLanguageSelector = false
@@ -73,7 +73,7 @@ pagination.pagerSize = 5
 [languages]
   [languages.en]
     languageName = "English"
-    title = "127.0.0.1"
+    title = "Dante's blog"
 
     [languages.en.params]
       subtitle = "A simple, retro theme for Hugo"
@@ -91,16 +91,20 @@ pagination.pagerSize = 5
       words = "words"
 
       [languages.en.params.logo]
-        logoText = "Terminal"
+        logoText = "Home"
         logoHomeLink = "/"
 
       [languages.en.menu]
+        [[languages.en.menu.main]]
+          identifier = "hackthebox-profile"
+          name = "HackTheBox-profile"
+          url = "https://app.hackthebox.com/users/627461"
         [[languages.en.menu.main]]
           identifier = "about"
           name = "About"
           url = "/about"
         [[languages.en.menu.main]]
-          identifier = "showcase"
-          name = "Showcase"
-          url = "/showcase"
+          identifier = "projects"
+          name = "Projects"
+          url = "https://github.com/Alx-J"
 
